--- a/Tor/client/tmpl-regQueues.html
+++ b/Tor/client/tmpl-regQueues.html
@@ -1,12 +1,12 @@
 <template name="regQueues">
      <div id="regQueuesView">
-    <h3>Registed Queue's</h3>
+    <h3>Registered Queue's</h3>
     <div class="form">
          <div class="form-group">
            <input type="text"
            id="txtJoin"
            class="form-control"
-           placeholder="Exist queue ID to join...">
+           placeholder="Enter the ID of the requested Queue...">
          </div>
          <button id="btnJoin" class="btn btn-info">Join Queue</button>
        </div>
