--- a/Tor/client/tmpl-toolbar.html
+++ b/Tor/client/tmpl-toolbar.html
@@ -20,7 +20,7 @@
      </li>
         <li>
        <div class="navbar-form navbar-left">
-         <button id="btnJoinNav" class="btn btn-info">Registed Queue's</button>
+         <button id="btnJoinNav" class="btn btn-info">Registered Queue's</button>
        </div>
      </li>
       {{> loginButtons}} <!-- here -->
